src/app/app.component.scss
.full-width {
  width: 100%;
}

.margin-bottom-15px {
  margin-bottom: 15px;
}

.margin-bottom-10px {
  margin-bottom: 10px;
}

.margin-top-15px {
  margin-top: 15px;
}

.margin-top-10px {
  margin-top: 10px;
}

.margin-right-10px {
  margin-right: 10px;
}

.padding-top-10px {
  padding-top: 10px;
}

.padding-left-10px {
  padding-left: 10px;
}

.spacer {
  flex: 1 1 auto;
}

// ::ng-deep .todo.mat-card {
//   background-color: white !important;
// }

// ::ng-deep .todo.mat-card:hover {
//   background-color: ghostwhite !important;
// }

.todo.mat-card {
  border-radius: 8px;
}

.todo.mat-card:hover {
  border: 2px solid thistle;
}

.content {
  padding: 3vw 2vw;
}

.app-frame {
  height: 100%;
}

input {
  font-size: 12px;
}

/* .material-icons {
  vertical-align: middle;
} */

.vertical-align {
  line-height: 100%;
}

::ng-deep .mat-card-header-text {
  margin-left: 0px !important;
  margin-right: 0px !important;
}

::ng-deep .mat-card-title {
  margin-bottom: 0px !important;
}

.overdue::before {
  content: "!! ";
}

.overdue {
  font-weight: bold;
}

.mat-button-toggle-group.options {
  height: 24px;
  align-items: center;
}

.mat-button-toggle-group.toggle {
  border-radius: 50%;
  border: 0;
}

.mat-button-toggle-appearance-standard.toggle {
  color: white;
  background: none;
}

@media screen and (max-width: 600px) {
  input {
    font-size: 20px;
  }
}

